# mbt

./: .cruft.json  .gitignore  README.md  mbt.code-workspace  pyproject.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/src/: lib.rs  mibi_file.rs  mod.rs
rust/src/parser/: descriptor_parser.rs  header_parser.rs  mod.rs  offset_table_parser.rs  pixel_parser.rs
rust/src/processing/: mod.rs  processing.rs
rust/src/types/: descriptor.rs  header.rs  mod.rs  offset_table.rs  pixel_data.rs
rust/src/utils/: channel_manager.rs  file_utils.rs  misc.rs  mod.rs  processing.rs
scripts/: read_benchmark.py  test.ipynb
src/mbt/: __init__.py  _core.pyi
src/mbt/cli/: cli.py
src/mbt/cli/commands/: __init__.py  info.py
src/mbt/core/: mibifile.py  models.py  utils.py
src/mbt/im/: __init__.py  basic.py
src/mbt/io/: __init__.py  tifffile.py  zarr.py
tests/: test_basic.py
