[build-system]
build-backend = "maturin"
requires = [ "hatchling", "maturin>=1" ]

[project]
name = "mbt"
description = "A rust parser for MIBI Binary files"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Sricharan Reddy Varra", email = "srivarra@stanford.edu" },
]
authors = [
  { name = "Sricharan Reddy Varra" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "natsort>=8.4",
  "numpydantic>=1.6.8",
  "patito>=0.8.3",
  "polars>=1.28.1",
  # for debug logging (referenced from the issue template)
  "pydantic>=2.11.4",
  "session-info",
  "sparse>=0.16",
  "spatial-image>=1.2.1",
  "tqdm>=4.67.1",
  "typer>=0.15.3",
  "universal-pathlib",
  "xarray[accel,parallel]>=2025.3.1",
]
optional-dependencies.dev = [
  "pre-commit",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.nb = [
  "datashader>=0.18",
  "hvplot>=0.11.3",
  "ipywidgets>=8.1.6",
  "jupyter-bokeh>=4.0.5",
  "jupyterlab>=4.3.5",
]
optional-dependencies.tensorstore = [
  "ngff-zarr",
  "tensorstore>=0.1.74",
  "zarr",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
optional-dependencies.zarr = [
  "ngff-zarr",
  "zarr",
  "zarrs>=0.1.4",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://mbt.readthedocs.io/"
urls.Homepage = "https://github.com/srivarra/mbt"
urls.Source = "https://github.com/srivarra/mbt"

scripts.mbt = "mbt:main"

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.maturin]
module-name = "mbt._core"
python-packages = [ "mbt" ]
python-source = "src"
bindings = "pyo3"
profile = "release"
manifest-path = "./rust/Cargo.toml"

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "mbt" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
