[package]
name = "mbt"
version = "0.0.1"
edition = "2024"

[lib]
name = "_core"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bon = "3.3.2"
itertools = "0.14.0"
memmap2 = "0.9.5"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
nom = "8.0.0"
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py310"] }
rand = "0.9.0-beta.3"
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
numpy = "0.23.0"
tiff = "0.9.1"

[features]
parallel = ["rayon"]

[build]
rustflags = ["-C", "target-cpu=native"]
