[package]
name = "mbt"
version = "0.0.1"
edition = "2024"

[lib]
name = "_core"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bon = "3.3.2"
itertools = "0.14.0"
memmap2 = "0.9.5"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py310"] }
rayon = { version = "1.10.0", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
numpy = "0.23.0"
winnow = { version = "0.7.4", features = ["simd"] }
polars = { version = "0.46.0", features = [
  "lazy",
  "dtype-struct",
  "dtype-categorical",
  "serde",
  "performant",
  "dtype-date",
  "dtype-datetime",
] }
# tiff = "0.9.1"
# zarrs = "0.19.2"
# zarrs_tools = "0.7.1"
