[package]
name = "mbt"
version = "0.0.1"
edition = "2024"

[lib]
name = "_core"
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
bon = "3.3.2"
itertools = "0.14.0"
memmap2 = "0.9.5"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py311", "nightly"] }
rayon = { version = "1.10.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
winnow = { version = "0.7.4", features = ["simd"] }
polars = { version = "0.46.0", features = [
  "lazy",
  "dtype-categorical",
  "serde",
  "performant",
  "dtype-date",
  "dtype-datetime",
  "cse",
  "parquet",
  "nightly"
] }
polars-io = "0.46.0"
pyo3-polars = { version = "0.20.0", features = ["derive"] }
